--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4400 --proxy-config proxy.config.json",
+    "start": "ng serve --port=10040",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
