--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.3.2",
-    "@angular/compiler": "^4.3.2",
-    "@angular/core": "^4.3.2",
-    "@angular/forms": "^4.3.2",
-    "@angular/http": "^4.3.2",
-    "@angular/platform-browser": "^4.3.2",
-    "@angular/platform-browser-dynamic": "^4.3.2",
-    "@angular/router": "^4.3.2",
+    "@angular/common": "^4.4.0-RC.0",
+    "@angular/compiler": "^4.4.0-RC.0",
+    "@angular/core": "^4.4.0-RC.0",
+    "@angular/forms": "^4.4.0-RC.0",
+    "@angular/http": "^4.4.0-RC.0",
+    "@angular/platform-browser": "^4.4.0-RC.0",
+    "@angular/platform-browser-dynamic": "^4.4.0-RC.0",
+    "@angular/animations": "^4.4.0-RC.0",
+    "@angular/router": "^4.4.0-RC.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/cli": "^1.2.6",
-    "@angular/compiler-cli": "^4.3.2",
-    "@types/jasmine": "2.5.53",
+    "@angular/compiler-cli": "^4.4.0-RC.0",
+    "@types/jasmine": "2.5.54",
     "@types/node": "^8.0.17",
     "codelyzer": "~3.1.2",
-    "jasmine-core": "~2.6.4",
-    "jasmine-spec-reporter": "~4.1.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
@@ -40,7 +41,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.1.2",
     "ts-node": "~3.3.0",
-    "tslint": "~5.5.0",
-    "typescript": "~2.4.2"
+    "tslint": "~5.7.0",
+    "typescript": "~2.5.2"
   }
 }
