--- a/package.json
+++ b/package.json
@@ -12,36 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.4.0-RC.0",
-    "@angular/compiler": "^4.4.0-RC.0",
-    "@angular/core": "^4.4.0-RC.0",
-    "@angular/forms": "^4.4.0-RC.0",
-    "@angular/http": "^4.4.0-RC.0",
-    "@angular/platform-browser": "^4.4.0-RC.0",
-    "@angular/platform-browser-dynamic": "^4.4.0-RC.0",
-    "@angular/animations": "^4.4.0-RC.0",
-    "@angular/router": "^4.4.0-RC.0",
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/http": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/animations": "^6.0.7",
+    "@angular/router": "^6.0.7",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.16"
+    "rxjs": "^6.2.1",
+    "zone.js": "^0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.6",
-    "@angular/compiler-cli": "^4.4.0-RC.0",
-    "@types/jasmine": "2.5.54",
-    "@types/node": "^8.0.17",
-    "codelyzer": "~3.1.2",
-    "jasmine-core": "~2.8.0",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
+    "@types/jasmine": "2.8.8",
+    "@types/node": "^10.5.2",
+    "codelyzer": "~4.4.2",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.0",
+    "karma": "~2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.1.2",
-    "ts-node": "~3.3.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.5.2"
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "^5.3.2",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.10.0",
+    "typescript": "^2.7.2"
   }
 }
