--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/animations": "^6.0.7",
-    "@angular/router": "^6.0.7",
+    "@angular/common": "^6.0.8",
+    "@angular/compiler": "^6.0.8",
+    "@angular/core": "^6.0.8",
+    "@angular/forms": "^6.0.8",
+    "@angular/http": "^6.0.8",
+    "@angular/platform-browser": "^6.0.8",
+    "@angular/platform-browser-dynamic": "^6.0.8",
+    "@angular/animations": "^6.0.8",
+    "@angular/router": "^6.0.8",
     "core-js": "^2.4.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.8",
     "@types/jasmine": "2.8.8",
     "@types/node": "^10.5.2",
     "codelyzer": "~4.4.2",
