--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.0.8",
     "@angular/common": "^6.0.8",
     "@angular/compiler": "^6.0.8",
     "@angular/core": "^6.0.8",
     "@angular/forms": "^6.0.8",
     "@angular/http": "^6.0.8",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.8",
     "@angular/platform-browser-dynamic": "^6.0.8",
-    "@angular/animations": "^6.0.8",
     "@angular/router": "^6.0.8",
     "core-js": "^2.4.1",
     "rxjs": "^6.2.2",
-    "zone.js": "^0.8.26",
-    "rxjs-compat": "^6.2.2"
+    "rxjs-compat": "^6.2.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
