--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.8",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.8",
     "@angular/compiler": "^6.0.8",
     "@angular/core": "^6.0.8",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^6.0.8",
     "@angular/router": "^6.0.8",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
